[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["Aseel-Z <aseelalzweri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
words = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.5b2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
